--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "faiss-node": "^0.5.1",
+    "groq-sdk": "^0.37.0",
     "mongodb": "^6.0.0",
     "mongoose": "^9.1.3",
     "node-fetch": "^3.3.2"
